[package]
name = "hj"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
duct = "1.0.0"
console = "0.16.0"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
rand = { version = "0.9.1", features = [ "alloc" ] }
