[package]
name = "hj-vcs"
description = "Fast, opinionated version control experience."
license = "MIT"
version = "0.1.12"
edition = "2024"
repository = "https://github.com/gaojunran/hj"
documentation = "https://hj-vcs.netlify.app"

[[bin]]
name = "hj"
path = "src/main.rs"


[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.15.11"
duct = "1.0.0"
console = "0.16.0"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
dirs = "6.0.0"
regex = "1.11.1"
rand = { version = "0.9.1", features = [ "alloc" ] }
reqwest = { version =  "0.12.20", default-features = false, features = [ "blocking", "json", "default-tls", "charset", "system-proxy" ] }
indicatif = "0.17.11"
tar = "0.4.44"
flate2 = "1.1.2"
serde_json = "1.0.141"
webbrowser = "1.0.5"
openssl = { version = "0.10.73", features = ["vendored"] }

